# phoenix-desktop

./: .gitignore  README.md  entitlements.plist  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: desktop-linux-test-pull.yml  desktop-mac-M1-test-pull.yml  desktop-mac-m1-test-pull.yml  desktop-mac-test-pull.yml  desktop-windows-test-pull.yml  prod-desktop-mac-m1-tests-on-pull.yml  prod-desktop-tests-on-pull.yml  prod-desktop-tests-on-push.yml  staging-desktop-tests-on-pull.yml  staging-desktop-tests-on-push.yml  tauri-build-dev.yml  tauri-build-mac-arm.yml  tauri-build-prod.yml  tauri-build-staging.yml  tauri-build.yml  update-phcode-build.yml  updateNotification.js  updateNotification.yml
docs/: CNAME  install.json  readme.md  surveys-readme.md  surveys.json
docs/appNotifications/: readme.md
docs/appNotifications/prod/de/: banner.json
docs/appNotifications/prod/fr/: banner.json
docs/appNotifications/prod/it/: banner.json
docs/appNotifications/prod/ja/: banner.json
docs/appNotifications/prod/ko/: banner.json
docs/appNotifications/prod/pt-BR/: banner.json
docs/appNotifications/prod/root/: banner.json
docs/appNotifications/staging/root/: banner.json
docs/googleAnalytics/: feeder.html
docs/linux/: installer-dev.sh  installer-latest-experimental-build.sh  installer-pre-prod.sh  installer.sh
docs/siteNotifications/: en.json
docs/tauri/: readme.md  release.json  update-latest-experimental-build.json  update-latest-stable-prod.json
src-build/: ci-createDistReleaseConfig.js  ci-disableBundleConfig.js  ci-setupDistFolders.js  cleanNode.js  cleanNodeBinary.js  clonePhoenix.js  clonePhoenixForTests.js  constants.js  createDemoReleaseConfig.js  createDistBundleReleaseConfig.js  createDistRelease.js  createDistReleaseConfig.js  createDistTestRelease.js  createDistTestReleaseConfig.js  createLocalReleaseConfig.js  createLocalReleaseConfigDist.js  createSrcRelease.js  createSrcReleaseConfig.js  downloadNode.js  downloadNodeBinary.js  getVersion.js  makeSrcNode.js  serveForPlatform.js  setupElectron.js  update-phcode-build.js  utils.js
src-build/linux/: install-readme.txt  install.sh  installer.sh  uninstall.sh
src-build/mac/: filesToSign
src-build/win/: reg_gen.js
src-electron/: config-dev.json  config-prod.json  config-staging.json  config.js  config.json  electron-builder.yml  ipc-security.js  main-app-ipc.js  main-cred-ipc.js  main-fs-ipc.js  main-window-ipc.js  main.js  package-lock.json  package.json  preload.js  renameBin.js  window-state.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/app/: hello.js
src-tauri/icons/: icon.icns
src-tauri/icons-mac/: icon.icns
src-tauri/license/: phoenix-eula  phoenix-eula.md  readme.md
src-tauri/src/: boot_config.rs  bugsnag.rs  init.rs  main.rs  platform.rs  utilities.rs
src-tauri/src/bundle/linux/deb/: main.desktop.download
src-tauri/src/bundle/windows/nsis/: installer.nsi  installer.txt
