[package]
name = "phoenix-code-ide"
version = "3.2.13"
description = "Phoenix is a modern open-source IDE for the web, built for the browser."
authors = ["arun@core.ai, charly@core.ai"]
license = "GNU AGPL 3.0"
repository = "https://github.com/phcode-dev/phoenix-desktop"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
once_cell = "1.18.0"
percent-encoding = "2.3"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "cli", "api-all", "updater", "devtools", "linux-protocol-headers"] }
winapi = { version = "0.3", features = ["fileapi"] }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
