[package]
name = "phoenix-code-ide"
version = "3.7.2"
description = "Phoenix is a modern open-source IDE for the web, built for the browser."
authors = ["arun@core.ai, charly@core.ai"]
license = "GNU AGPL 3.0"
repository = "https://github.com/phcode-dev/phoenix-desktop"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.116"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
regex = "1.10.4"
clipboard-files = "0.1.1"
trash = "4"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "updater", "cli", "api-all", "devtools", "linux-protocol-headers"] }
winapi = { version = "0.3.9", features = ["fileapi"] }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"
webkit2gtk = "0.18" # if tauri build fails, make sure to match this version to what we have in tauri

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
tauri-plugin-deep-link = "0.1.2"
lazy_static = "1.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
