[package]
name = "phoenix-code-ide"
version = "5.1.3"
description = "Phoenix Code"
authors = ["arun@core.ai, charly@core.ai"]
license = "GNU AGPL 3.0"
repository = "https://github.com/phcode-dev/phoenix-desktop"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
os_info = "3"
chrono = "0.4"
serde_json = "1.0.116"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
regex = "1.10.4"
clipboard-files = "0.1.1"
trash = "5"
webbrowser = "1.0"
backtrace = "0.3.73"
serde = { version = "1.0.200", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "updater", "cli", "api-all", "devtools", "linux-protocol-headers"] }
winapi = { version = "0.3.9", features = ["fileapi"] }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
keyring = "2.3.3"
whoami = "1.5.2"
# AES encryption dependencies
# AES encryption dependencies
aes-gcm = "0.10"
hex = "0.4.3"

[target.'cfg(target_os = "windows")'.dependencies]
native-dialog = "0.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"
webkit2gtk = "0.18" # if tauri build fails, make sure to match this version to what we have in tauri
dialog = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
tauri-plugin-deep-link = "0.1.2"
lazy_static = "1.4"
native-dialog = "0.7.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug = "line-tables-only"
split-debuginfo = "unpacked"
